# dotmesh

./: .dazelrc  .dockerignore  .gitignore  .gitlab-ci.yml  BUILD.bazel  Dockerfile.build  Gopkg.toml  ISSUE_TEMPLATE.md  Makefile  README.md  Vagrantfile  WORKSPACE  bazel-build.sh  build-lib.sh  build_setup.sh  debug-in-browser.sh  dev.sh  docker-binary-build.bazel  file  go.mod  go.sum  lib.sh  prep-tests.sh  prime.sh  rebuild.sh  rebuild_client.sh  rebuild_flexvolume.sh  rebuild_in_container_without_bazel.sh  rebuild_operator.sh  rebuild_provisioner.sh  rebuild_server.sh  rebuild_without_bazel.sh  release-hosts  release-images.sh  renovate.json  smoke.sh  test.sh  version_status.sh
cmd/dm/: .dazelrc  BUILD.bazel  Dockerfile.build  Gopkg.toml  WORKSPACE  dotmesh.go  rebuild.sh  rebuild_docker.sh
cmd/dm/Godeps/: Godeps.json
cmd/dm/pkg/cert/: BUILD
cmd/dm/pkg/commands/: BUILD.bazel  branch.go  checkout.go  clone.go  cluster.go  commit.go  debug.go  dot.go  etcd_setup.go  etcd_setup_test.go  init.go  list.go  log.go  main.go  mount.go  pull.go  push.go  remote.go  reset.go  s3.go  switch.go  utils.go  version.go
cmd/dm/pkg/pki/: BUILD.bazel  pki.go
cmd/dm/pkg/remotes/: BUILD.bazel  api.go  remotes.go
cmd/dm/pkg/test/: BUILD.bazel  api_test.go
cmd/dm/pkg/test/fixtures/: admin.config  non-admin.config
cmd/dotmesh-server/: BUILD.bazel  Dockerfile  Dockerfile.build  Dockerfile.multistage  Gopkg.toml  activestate.go  auth_handler.go  backoffstate.go  checkupdates.go  communications.go  controller.go  controller_fsm.go  diff_handlers.go  discoveringstate.go  docker.go  dockerclient.go  etcd.go  etcd_filesystem_watchers.go  etcd_registry_watchers.go  etcd_server_watchers.go  etcd_watchers.go  failedstate.go  handoffstate.go  http.go  http_test.go  inactivestate.go  liveness.go  main.go  messaging.go  metadata.go  missingstate.go  mount.go  observer.go  pullinitiatorstate.go  pullpeerstate.go  pushinitiatorstate.go  pushpeerstate.go  rebuild.sh  receivingstate.go  registry.go  (+23 more)
cmd/dotmesh-server/pkg/dind-dynamic-provisioning/: BUILD.bazel  Dockerfile  Gopkg.toml  dind-provisioner.go  dm-provisioner.go
cmd/dotmesh-server/pkg/dind-dynamic-provisioning/dynamic-provisioning/: Gopkg.toml
cmd/dotmesh-server/pkg/dind-flexvolume/: BUILD.bazel  flexvolume.go
cmd/dotmesh-server/pkg/dynamic-provisioning/: dm-provisioner.go  glide.yaml
cmd/dotmesh-server/pkg/flexvolume/: Gopkg.toml  flexvolume.go
cmd/dotmesh-server/pkg/flexvolume/Godeps/: Godeps.json
cmd/dotmesh-server/pkg/main/: Gopkg.toml  checkupdates.go  client.go  controller.go  docker.go  dockerclient.go  etcd.go  http.go  kubernetes.go  main.go  observer.go  registry.go  replication.go  rpc.go  statemachines.go  types.go  users.go  utils.go  zfs.go
cmd/dotmesh-server/pkg/operator/: Gopkg.toml  README.md  main.go
cmd/dotmesh-server/statemachine/: communications.go  mount.go  s3.go  statemachines.go  transfers.go  types.go
cmd/dotmesh-server/statemachine/states/: active.go  backoff.go  discovering.go  failed.go  handoff.go  inactive.go  missing.go  pullIniator.go  pullPeer.go  pushInitiator.go  pushPeer.go  receiving.go  s3PullInitiator.go  s3PushInitiator.go
cmd/dynamic-provisioner/: BUILD.bazel  Dockerfile  dm-provisioner.go
cmd/flexvolume/: BUILD.bazel  flexvolume.go
cmd/operator/: BUILD.bazel  Dockerfile  README.md  main.go
cmd/versioner/: BUILD.bazel  versioner.go  versioner_test.go
deploy/: daemonset.yaml  (+9 more)
pkg/archiver/: BUILD.bazel  archiver.go  tar.go  tar_test.go
pkg/auth/: BUILD.bazel  auth_ctx.go  auth_ctx_test.go
pkg/client/: BUILD.bazel  api.go  client.go  remotes.go
pkg/crypto/: BUILD.bazel  crypto.go  crypto_test.go
pkg/fsm/: BUILD.bazel  communications.go  fsm.go  fsm_active.go  fsm_active_file_io.go  fsm_active_file_io_test.go  fsm_backoff.go  fsm_diff.go  fsm_discovering.go  fsm_discovering_test.go  fsm_failed.go  fsm_handoff.go  fsm_handoff_test.go  fsm_inactive.go  fsm_metadata.go  fsm_metadata_test.go  fsm_missing.go  fsm_pull_initiator.go  fsm_pull_peer.go  fsm_push_initiator.go  fsm_push_peer.go  fsm_receiving.go  fsm_s3_pull_initiator.go  fsm_s3_push_initiator.go  metadata.go  metrics.go  mount.go  prelude.go  s3.go  s3_test.go  snapshotlogic.go  statemanager_mock.go  transfers.go  types.go  units.go  utils.go  zfs.go
pkg/fsm/testdata/: archived-second-file_tar  archived-test-file_tar  test-file.txt  updated-file_tar
pkg/kv/: BUILD.bazel  idx.go  kv.go  kv_test.go
pkg/messaging/nats/: BUILD.bazel  nats_messenger.go  nats_messenger_test.go  nats_server.go  server_cfg.go
pkg/metrics/: BUILD.bazel  metrics.go
pkg/notification/: BUILD.bazel  notification.go
pkg/notification/nats/: BUILD.bazel  nats_publisher.go  nats_publisher_test.go
pkg/pubsub/: BUILD.bazel  pubsub.go  pubsub_test.go
pkg/registry/: BUILD.bazel  registry.go  registry_master_cache.go  registry_test.go  types.go
pkg/store/: BUILD.bazel  kvdb.go  kvdb_filesystem.go  kvdb_filesystem_test.go  kvdb_registry.go  kvdb_server.go  kvdb_test.go  kvdb_userstore.go  store.go  types.go  utils.go  utils_test.go
pkg/testutil/: BUILD.bazel  testutil.go
pkg/timeutil/: BUILD.bazel
pkg/types/: BUILD.bazel  diff.go  event.go  event_names.go  event_test.go  filechange_jsonenums.go  filesystem.go  fsm_types.go  fsm_types_test.go  kv_store.go  last_modified.go  messenger.go  notification.go  tlf.go  types.go  types_test.go  user.go  volumes.go
pkg/user/: BUILD.bazel  external.go  external_server.go  internal.go  user.go  user_test.go  utils.go
pkg/utils/: BUILD.bazel  io.go  metadata.go  mount.go  returncode.go
pkg/zfs/: BUILD.bazel  exec_util.go  fs_util.go  fs_util_test.go  zfs.go  zfs_test.go  zpool.go
tests/: BUILD.bazel  Gopkg.toml  acceptance_test.go  create-s3-stress-test-bucket.sh  external_user_manager_test.go  fork_test.go  s3_test.go  s3api_multinode_test.go  s3api_test.go  s3remote_test.go  s3remotestress_test.go  scratch_s3.go  testtools.go
tests/Godeps/: Godeps.json
tests/docker/: Dockerfile  build.sh  dindnet
tests/testdata/: archived-test-file_tar  second-file.txt  test-file.txt
(+99 files in other folders)
