load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "go_default_library",
    srcs = [
        "activestate.go",
        "auth_handler.go",
        "backoffstate.go",
        "checkupdates.go",
        "client.go",
        "communications.go",
        "controller.go",
        "discoveringstate.go",
        "docker.go",
        "dockerclient.go",
        "etcd.go",
        "failedstate.go",
        "handoffstate.go",
        "http.go",
        "inactivestate.go",
        "kubernetes.go",
        "liveness.go",
        "main.go",
        "metadata.go",
        "missingstate.go",
        "mount.go",
        "observer.go",
        "pullinitiatorstate.go",
        "pullpeerstate.go",
        "pushinitiatorstate.go",
        "pushpeerstate.go",
        "receivingstate.go",
        "repl.go",
        "replication.go",
        "rpc.go",
        "s3.go",
        "s3pullinitiatorstate.go",
        "s3pushinitiatorstate.go",
        "snapshotlogic.go",
        "statemachines.go",
        "transfers.go",
        "types.go",
        "users.go",
        "utils.go",
        "zfs.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/cmd/dotmesh-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/kv:go_default_library",
        "//pkg/registry:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/user:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3/s3manager:go_default_library",
        "//vendor/github.com/coreos/etcd/client:go_default_library",
        "//vendor/github.com/dotmesh-io/go-checkpoint:go_default_library",
        "//vendor/github.com/fsouza/go-dockerclient:go_default_library",
        "//vendor/github.com/gorilla/handlers:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/gorilla/rpc/v2:go_default_library",
        "//vendor/github.com/gorilla/rpc/v2/json2:go_default_library",
        "//vendor/github.com/nu7hatch/gouuid:go_default_library",
        "//vendor/github.com/opentracing/opentracing-go:go_default_library",
        "//vendor/github.com/openzipkin/zipkin-go-opentracing:go_default_library",
        "//vendor/github.com/openzipkin/zipkin-go-opentracing/examples/middleware:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_binary(
    name = "server-bin",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "dotmesh-server-img",
    base = "//:dotmesh-base.tar",
    files = [
        "//cmd/dotmesh-server:server-bin",
        "//cmd/dotmesh-server/pkg/dind-flexvolume",
        "//cmd/flexvolume",
    ],
    visibility = ["//visibility:public"],
)

docker_push(
    name = "dotmesh-server_push",
    image = ":dotmesh-server-img",
    registry = "{CI_REGISTRY}",
    repository = "dotmesh/dotmesh-server",
    stamp = 1,
    tag = "{DOCKERTAG}",
)

go_test(
    name = "go_default_test",
    srcs = ["rpc_test.go"],
    embed = [":go_default_library"],
)
