load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["flexvolume.go"],
    importpath = "github.com/dotmesh-io/dotmesh/cmd/flexvolume",
    visibility = ["//visibility:private"],
    deps = ["//cmd/flexvolume/vendor/github.com/gorilla/rpc/v2/json2:go_default_library"],
)

go_binary(
    name = "flexvolume",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
