load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["versioner.go"],
    importpath = "github.com/dotmesh-io/dotmesh/cmd/versioner",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "versioner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["versioner_test.go"],
    embed = [":go_default_library"],
)
