load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["auth_ctx.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = ["//github.com/dotmesh-io/dotmesh/pkg/user:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["auth_ctx_test.go"],
    embed = [":go_default_library"],
    deps = ["//github.com/dotmesh-io/dotmesh/pkg/user:go_default_library"],
)
