load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go", "api.go", "remotes.go"],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/client",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/gorilla/rpc/v2/json2:go_default_library",
        "//vendor/github.com/opentracing/opentracing-go:go_default_library",
        "//vendor/github.com/openzipkin/zipkin-go-opentracing/examples/middleware:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
