load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["crypto.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/dotmesh-io/dotmesh/pkg/validator:go_default_library",
        "//golang.org/x/crypto/scrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["crypto_test.go"],
    embed = [":go_default_library"],
)
