load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pubsub.go"],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/pubsub",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/nats-io/go-nats:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/crypto/scrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pubsub_test.go"],
    embed = [":go_default_library"],
)
