load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "registry.go",
        "registry_master_cache.go",
        "types.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/store:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/user:go_default_library",
        "//vendor/github.com/portworx/kvdb:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["registry_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/store:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/user:go_default_library",
    ],
)
