load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "kvdb.go",
        "kvdb_filesystem.go",
        "kvdb_registry.go",
        "kvdb_server.go",
        "kvdb_userstore.go",
        "store.go",
        "types.go",
        "utils.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/store",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types:go_default_library",
        "//pkg/validator:go_default_library",
        "//vendor/github.com/portworx/kvdb:go_default_library",
        "//vendor/github.com/portworx/kvdb/bolt:go_default_library",
        "//vendor/github.com/portworx/kvdb/etcd/v3:go_default_library",
        "//vendor/github.com/portworx/kvdb/mem:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "kvdb_filesystem_test.go",
        "kvdb_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//pkg/types:go_default_library"],
)
