load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testutil.go"],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/coreos/etcd/client:go_default_library",
        "//vendor/github.com/coreos/etcd/embed:go_default_library",
        "//vendor/github.com/nu7hatch/gouuid:go_default_library",
    ],
)
