load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testutil.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/coreos/etcd/client:go_default_library",
        "//github.com/coreos/etcd/embed:go_default_library",
        "//github.com/nu7hatch/gouuid:go_default_library",
    ],
)
