load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "backoff.go",
        "now.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/timeutil",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["backoff_test.go"],
    embed = [":go_default_library"],
)
