load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "tlf.go",
        "types.go",
        "volumes.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/dotmesh-io/dotmesh/pkg/auth:go_default_library",
        "//github.com/dotmesh-io/dotmesh/pkg/user:go_default_library",
    ],
)
