load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "user.go",
        "utils.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/dotmesh-io/dotmesh/pkg/crypto:go_default_library",
        "//github.com/dotmesh-io/dotmesh/pkg/kv:go_default_library",
        "//github.com/dotmesh-io/dotmesh/pkg/validator:go_default_library",
        "//github.com/nu7hatch/gouuid:go_default_library",
        "//github.com/sirupsen/logrus:go_default_library",
        "//k8s.io/apimachinery/pkg/labels:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["user_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//github.com/dotmesh-io/dotmesh/pkg/kv:go_default_library",
        "//github.com/dotmesh-io/dotmesh/pkg/testutil:go_default_library",
        "//github.com/nu7hatch/gouuid:go_default_library",
    ],
)
