load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "io.go",
        "metadata.go",
        "mount.go",
        "returncode.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
